<resources>
    <string name="app_name">Storybook App</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_story">Create new Story</string>
    <string name="view_all_your_stories">View All your Stories</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="name_of_story">Name of «Story</string>
    <string name="story">Story</string>
    <string name="save">Save</string>
    <string name="view_story">View Story</string>
    <string name="title_activity_opening">OpeningActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profile</string>
    <string name="log_ut">Log-out</string>
    <string name="account_info">Account Info</string>
    <string name="my_stories">My Stories</string>
    <string name="following">Following</string>
    <string name="full_name">Full name</string>
    <string name="storybook">Storybook</string>
    <string name="upload">Upload</string>
</resources>
