<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/following" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/my_stories" />
    </group>

    <item android:title="@string/account_info">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_ut" />
        </menu>
    </item>

</menu>
