<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Views.HomeView">
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="42sp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Create_new_story"
        android:text="@string/create_new_story"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Current_Stories"
        android:text="@string/view_all_your_stories"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/goto_profile"
        android:text="@string/go_to_profile"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>