<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.SignUpActivity">

    <TextView
        android:text="@string/app_name"
        android:textSize="67sp"
        android:gravity="center"
        android:fontFamily="@font/barrioregular"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Customedittext">

        <EditText
            android:id="@+id/sign_up_mail"
            android:hint="@string/email_address"
            android:textColor="#993333"
            android:textStyle="bold"
            android:backgroundTint="#993333"
            android:textCursorDrawable="@null"
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Customedittext"
        app:passwordToggleTint="#993333"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/sign_up_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:backgroundTint="#993333"
            android:textCursorDrawable="@null"
            android:textColor="#993333"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Customedittext"
        app:passwordToggleTint="#993333"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirm_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#993333"
            android:textStyle="bold"
            android:backgroundTint="#993333"
            android:textCursorDrawable="@null"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#f2f2f2"
        android:background="#0066cc"
        android:fontFamily="@font/ribeyemarrowregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>